--- a/src/style/main.css
+++ b/src/style/main.css
@@ -2,11 +2,25 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+
+
 /* animazione caduta del testo */
 @keyframes falling {
     from {
         opacity: 0;
         transform: translateY(-70px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes emerge {
+    from {
+        opacity: 0;
+        transform: translateY(40px);
     }
 
     to {
